# waiwera

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  benchmark-setup.sh  benchmark_tests.py  bitbucket-pipelines.yml  bootstrap-box.sh  bootstrap.sh  config.py  config.sh  depends.in  depends.py  devdoc.md  docker-compose.test.yml  docker-packer.json  fruit_config.py  fruit_processor.sh  fruitpy-setup.sh  fson_config.py  makefile  meson.build  meson_options.txt  test.py  unit_tests.py  update_version.py  variables.json  waiwera-dkr.py  waiwera-setup.sh  waiwera-testing.sh
.github/workflows/: pythonpublish.yml  pythontest.yml  test.yml
ansible/: base.yml  fruit.yml  fson.yml  main.yml  openmpi.yml  packer.yml  petsc.yml  setup.yml  site.yml  supermodels.yml
ansible/files/: opt_paths.sh
ansible/group_vars/: all.yml  waiwera.yml
ansible/roles/common/defaults/: main.yml
ansible/tasks/: docker.yml
cmake-modules/: FindFRUIT.cmake  FindFSON.cmake  install_FSON.cmake
deploy/: .dockerignore  Dockerfile  README.md  entrypoint.sh  mkdocs.yml  waiwera.py
deploy/ansible/: local.yml  main.retry  site.yml
deploy/docs/: ansible.md  ansible_errors.txt  docker-errors.txt  docker.md  how_ninja_works.md  index.md  waiwera-errors.txt
deploy/docs/v0.3/: AY_notes_docker_waiwera_user_guide.md  waiwera.ps1  waiwera.sh
deploy/hooks/: build
deploy/packer/: variables.json
deploy/vagrant/archlinux/: Vagrantfile
deploy/vagrant/debian-9/: Vagrantfile
deploy/vagrant/fedora-29/: Vagrantfile
deploy/vagrant/ubuntu-18.04/: Vagrantfile
deploy/vagrant/ubuntu-noroot/: Vagrantfile
doc/: depends.dot  readme
doc/dev/: index.md  readme
doc/dev/code/: index.md
doc/dev/impl/: index.md
doc/user/: Makefile  benchmark.rst  capillary_linear.py  conf.py  demo_setup.py  import.rst  index.rst  input.rst  input_data.rst  input_schema.rst  installation.rst  intro.rst  json.rst  make.bat  mesh.rst  methods.rst  output.rst  relative_permeability_linear.py  relative_permeability_table.py  requirements.txt  run.rst  setup.rst  setup_boundaries.rst  setup_eos.rst  setup_gravity.rst  setup_initial.rst  setup_interpolation_tables.rst  setup_logfile.rst  setup_mesh.rst  setup_minc.rst  setup_output.rst  setup_rock.rst  setup_script.rst  setup_source_networks.rst  setup_sources.rst  setup_thermodynamics.rst  setup_time.rst  setup_title.rst  setup_tracer.rst  testing.rst  (+3 more)
docs/: AY_notes_docker.md  ansible_errors.txt  working_with_docker.md
docs/v0.3/: waiwera.bat
hooks/: build  test
install/: .gitignore  Dockerfile  README.md  entrypoint.sh
install/ansible/: build.yml  docker.yml  hosts  install.yml  install_local.yml  local.yml  packer.yml  vagrant.yml  vagrant_remote.yml  vagrant_setup.yml
install/ansible/group_vars/: all.yml
install/ansible/host_vars/: docker.yml
install/hooks/: build  test
install/packer/: docker-packer.json  variables.json
install/vagrant/: Readme.md
install/vagrant/archlinux/: Vagrantfile
install/vagrant/centos-7/: Vagrantfile
install/vagrant/debian-9/: Vagrantfile
install/vagrant/fedora-29/: Vagrantfile
install/vagrant/ubuntu-18.04/: Vagrantfile
install/vagrant/ubuntu-noroot/: Vagrantfile
install/vagrant/ubuntu-test/: Vagrantfile
packer/: docker-packer.json
python/: README.md  setup.py
python/waiwera/: docker.py
src/: #fluid.F90#  IAPWS.F90  IFC67.F90  boundary.F90  capillary_pressure.F90  cell.F90  cell_order.F90  control.F90  dag.F90  dictionary.F90  dm_utils.F90  eos.F90  eos_se.F90  eos_setup.F90  eos_w.F90  eos_wae.F90  eos_wce.F90  eos_we.F90  eos_wge.F90  eos_wsae.F90  eos_wsce.F90  eos_wse.F90  eos_wsge.F90  face.F90  flow_simulation.F90  fluid.F90  fson_mpi.F90  fson_utils.F90  hdf5io.F90  initial.F90  interpolation.F90  kdtree.F90  kinds.F90  list.F90  logfile.F90  mesh.F90  minc.F90  mpi.F90  mpi_utils.F90  ncg_air_thermodynamics.F90  (+36 more)
subprojects/: FSON.wrap  fson.wrap  zofu.wrap
test/benchmark/: setup.py
test/solids/column1/: ghotcol.exo  hotcol_ss.autogeners  hotcol_ss.h5  hotcol_ss.json  hotcol_ss.listing  hotcol_ss.save  hotcol_ss.vtk  hotcol_ss.yaml  mesh.data  setup.py  setup_ss.py  vers.data
test/src/: IAPWS_test.F90  IFC67_test.F90  cell_test.F90  dm_utils_test.F90  eos_test.F90  eos_w_test.F90  face_test.F90  flow_simulation_test.F90  fluid_test.F90  fson_mpi_test.F90  interpolation_test.F90  kinds_test.F90  list_test.F90  mesh_test.F90  ncg_co2_thermodynamics_test.F90  powertable_test.F90  relative_permeability_test.F90  rock_test.F90  setup_test.F90  simulation_test.F90  source_control_test.F90  source_setup_test.F90  source_test.F90  test_all.F90  timestepper_test.F90  timestepping_test.F90  utils_test.F90
test/unit/src/: IAPWS_test.F90  IFC67_test.F90  capillary_pressure_test.F90  cell_test.F90  dag_test.F90  dictionary_test.F90  dm_utils_test.F90  eos_se_test.F90  eos_test.F90  eos_w_test.F90  eos_wae_test.F90  eos_we_test.F90  eos_wge_test.F90  eos_wse_test.F90  eos_wsge_test.F90  face_test.F90  flow_simulation_test.F90  fluid_test.F90  fson_mpi_test.F90  initial_test.F90  interpolation_test.F90  kdtree_test.F90  list_test.F90  mesh_test.F90  minc_test.F90  ncg_air_thermodynamics_test.F90  ncg_co2_thermodynamics_test.F90  powertable_test.F90  relative_permeability_test.F90  rock_control_test.F90  rock_test.F90  root_finder_test.F90  salt_thermodynamics_test.F90  separator_test.F90  setup_test.F90  source_control_test.F90  source_network_control_test.F90  source_network_reinjector_test.F90  source_setup_test.F90  source_test.F90  (+4 more)
utils/: input_schema.json  t2data_json.py  test_schema.py  test_t2data_json.py
utils/pywaiwera/: README.md  pyproject.toml  setup.cfg  setup.py
utils/pywaiwera/pywaiwera/: __init__.py  common.py  docker.py
utils/pywaiwera/test/: test_package.py  test_waiwera_dkr.py
vagrant/arch/: Vagrantfile
vagrant/archlinux/: Vagrantfile
vagrant/centos-7/: Vagrantfile
vagrant/debian-9/: Vagrantfile
vagrant/fedora-29/: Vagrantfile
vagrant/ubuntu-18.04/: Vagrantfile
vagrant/ubuntu-noroot/: Vagrantfile
(+316 files in other folders)
