[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pywaiwera"
version = "1.5.1"
description = "Python package for the Waiwera simulator"
readme = "README.md"
authors = [
  {name = "Waiwera Project", email = "waiwera.project@gmail.com"}
]
requires-python = ">=2.7"
classifiers = [
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent"
]

[project.scripts]
waiwera-dkr = "pywaiwera.docker:main"

[project.urls]
repository = "https://github.com/waiwera/waiwera"


